--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
       <img class="product__image" src="./img/product-triple-set-mobile.jpg" width="260" height="315"
         alt="Сет из трех вязаных корзинок.">
       <span class="product__price">Цена: 990 руб.</span>
-      <button class="product__button button">Заказать</button>
+      <button class="product__button button" type="button">Заказать</button>
     </section>
     <section class="advantages">
       <h2 class="advantages__title title">Коротко о нас:</h2>
