--- a/source/catalog.html
+++ b/source/catalog.html
@@ -8,7 +8,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo logo">
+    <a class="main-header__logo logo" href="index.html">
       <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" width="86" height="35"
         alt="Логотип магазина Мишка.">
     </a>
@@ -23,7 +23,7 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог товаров</a>
+            <a class="site-list__link" href="#">Каталог товаров</a>
           </li>
           <li class="site-list__item">
             <a class="site-list__link" href="form.html">Вязание на заказ</a>
@@ -55,97 +55,50 @@
     </nav>
   </header>
 
-  <main class="main-container">
-    <h1 class="visually-hidden">Интернет магазин Мишка.</h1>
-    <section class="intro">
-      <h2 class="intro__title title">Милые штуки ручной работы для дома</h2>
-      <ul class="intro__list">
-        <li class="intro__item">
-          <a class="intro__link intro__link--primary" href="#">Предметы интерьера</a>
+  <main class="main-catalog">
+    <section class="products">
+      <h2 class="products__title title">Каталог товаров</h2>
+      <ul class="products__list catalog">
+        <li class="catalog__item">
+          <a class="catalog__link" href="#">
+            <img class="catalog__image" width="260" height="195" src="./img/photo-1-mobile.jpg" alt="Игрушка заяц.">
+            <h3 class="catalog__subtitle subtitle">Зайчик-попрыгайчик</h3>
+          </a>
+          <p class="catalog__description">Рост 30 см, вес 200 г</p>
+          <b class="catalog__price">1 200 руб.</b>
+          <button class="catalog__to-cart" type="button" aria-label="Добавить в корзину."></button>
         </li>
-        <li class="intro__item">
-          <a class="intro__link intro__link--secondary" href="#">Детские игрушки</a>
+        <li class="catalog__item">
+          <a class="catalog__link" href="#">
+            <img class="catalog__image" width="260" height="195" src="./img/photo-2-mobile.jpg" alt="Вязаная корзинка.">
+            <h3 class="catalog__subtitle subtitle">Корзинка для белья</h3>
+          </a>
+          <p class="catalog__description">Диаметр 15 см, высота 10 см</p>
+          <b class="catalog__price">690 руб.</b>
+          <button class="catalog__to-cart" type="button" aria-label="Добавить в корзину."></button>
         </li>
-      </ul>
-    </section>
-
-    <section class="product">
-      <h2 class="product__title title">Вязаные корзинки</h2>
-      <span class="product__subtitle">Товар недели</span>
-      <p class="product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх
-        размерах.</p>
-      <dl class="product__features features">
-        <dt class="features__parameter">Цвет:</dt>
-        <dd class="features__description">тиффани/серый</dd>
-        <dt class="features__parameter">Диаметр:</dt>
-        <dd class="features__description">25 см</dd>
-        <dt class="features__parameter">Высота:</dt>
-        <dd class="features__description">15 см</dd>
-      </dl>
-      <img class="product__image" src="./img/product-triple-set-mobile.jpg" width="260" height="315"
-        alt="Сет из трех вязаных корзинок.">
-      <span class="product__price">Цена: 990 руб.</span>
-      <button class="product__button button" type="button">Заказать</button>
-    </section>
-    <section class="advantages">
-      <h2 class="advantages__title title">Коротко о нас:</h2>
-      <ul class="advantages__list">
-        <li class="advantages__item advantages__item--eco">Экологически чистые материалы</li>
-        <li class="advantages__item advantages__item--price">Скандинавский стиль по российской цене</li>
-        <li class="advantages__item advantages__item--likes">Увеличивает лайки на фотографиях</li>
-        <li class="advantages__item advantages__item--handmade">Связано вручную с любовью и умилением</li>
-        <li class="advantages__item advantages__item--support">Поддержка отечественного производителя</li>
-        <li class="advantages__item advantages__item--package">Поставляется в подарочной упаковке</li>
-      </ul>
-    </section>
-
-    <section class="reviews">
-      <h2 class="reviews__title title">Отзывы</h2>
-      <ul class="reviews__list">
-        <li class="reviews__item">
-          <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого
-            количества
-            лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-            фотографии
-            сразу стали более стильными, а также набирают больше лайков!</blockquote>
-          <p class="reviews__autor">Анастасия Красильникова</p>
-          <cite class="reviews__link">@misssssiskras</cite>
-        </li>
-        <li class="reviews__item">
-          <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого
-            количества
-            лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-            фотографии
-            сразу стали более стильными, а также набирают больше лайков!</blockquote>
-          <p class="reviews__autor">Анастасия Красильникова</p>
-          <cite class="reviews__link">@misssssiskras</cite>
+        <li class="catalog__item">
+          <a class="catalog__link" href="#">
+            <img class="catalog__image" width="260" height="195" src="./img/photo-3-mobile.jpg"
+              alt="Большая вязаная корзинка">
+            <h3 class="catalog__subtitle subtitle">Большая корзинка для игрушек</h3>
+          </a>
+          <p class="catalog__description">Диаметр 30 см, высота 30 см</p>
+          <b class="catalog__price">1 500 руб.</b>
+          <button class="catalog__to-cart" type="button" aria-label="Добавить в корзину."></button>
         </li>
       </ul>
-      <div class="reviews__button-wrapper">
-        <button class="reviews__button-previous" type="button">
-          <span class="visually-hidden">Предыдущий отзыв.</span>
-        </button>
-        <button class="reviews__button-next" type="button">
-          <span class="visually-hidden">Следующий отзыв.</span>
-        </button>
-        <a class="reviews__write button" href="#">Написать</a>
-      </div>
-    </section>
-    <section class="contacts">
-      <h2 class="contacts__title title">Контакты</h2>
-      <address class="contacts__adress">
-        <p class="contacts__email-label">e-mail:</p>
-        <a class="contacts__email-content" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-        <p class="contacts__text-label">адрес:</p>
-        <p class="contacts__text-content">г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</p>
-      </address>
-      <div class="contacts__map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533182!2d30.32085871558654!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649167384236!5m2!1sru!2sru"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <a class="contacts__write button" href="#">Напишите нам</a>
+      <section class="production">
+        <h3 class="production__subtitle subtitle">Процесс производства</h3>
+        <div class="video-container">
+          <video class="video" width="260" height="150" poster="./img/video-mobile.jpg">
+            <div class="playpause"></div>
+            <p class="video__description">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том,
+              как появляются наши товары.</p>
+          </video>
+        </div>
+        <button class="order-button button" type="button">Сделать заказ</button>
+      </section>
     </section>
   </main>
 
