--- a/source/form.html
+++ b/source/form.html
@@ -8,7 +8,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="main-header__logo logo">
+    <a class="main-header__logo logo" href="index.html">
       <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" width="86" height="35"
         alt="Логотип магазина Мишка.">
     </a>
@@ -26,7 +26,7 @@
             <a class="site-list__link" href="catalog.html">Каталог товаров</a>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="form.html">Вязание на заказ</a>
+            <a class="site-list__link" href="#">Вязание на заказ</a>
           </li>
         </ul>
         <ul class="main-nav__list user-list">
@@ -55,97 +55,120 @@
     </nav>
   </header>
 
-  <main class="main-container">
-    <h1 class="visually-hidden">Интернет магазин Мишка.</h1>
-    <section class="intro">
-      <h2 class="intro__title title">Милые штуки ручной работы для дома</h2>
-      <ul class="intro__list">
-        <li class="intro__item">
-          <a class="intro__link intro__link--primary" href="#">Предметы интерьера</a>
-        </li>
-        <li class="intro__item">
-          <a class="intro__link intro__link--secondary" href="#">Детские игрушки</a>
-        </li>
-      </ul>
-    </section>
+  <main class="main-form">
+    <section class="form">
+      <h2 class="form__title title">Вязание на заказ</h2>
+      <p class="form__subtitle">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы
+        свяжемся с вами, чтобы уточнить детали.</p>
 
-    <section class="product">
-      <h2 class="product__title title">Вязаные корзинки</h2>
-      <span class="product__subtitle">Товар недели</span>
-      <p class="product__description">Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх
-        размерах.</p>
-      <dl class="product__features features">
-        <dt class="features__parameter">Цвет:</dt>
-        <dd class="features__description">тиффани/серый</dd>
-        <dt class="features__parameter">Диаметр:</dt>
-        <dd class="features__description">25 см</dd>
-        <dt class="features__parameter">Высота:</dt>
-        <dd class="features__description">15 см</dd>
-      </dl>
-      <img class="product__image" src="./img/product-triple-set-mobile.jpg" width="260" height="315"
-        alt="Сет из трех вязаных корзинок.">
-      <span class="product__price">Цена: 990 руб.</span>
-      <button class="product__button button" type="button">Заказать</button>
-    </section>
-    <section class="advantages">
-      <h2 class="advantages__title title">Коротко о нас:</h2>
-      <ul class="advantages__list">
-        <li class="advantages__item advantages__item--eco">Экологически чистые материалы</li>
-        <li class="advantages__item advantages__item--price">Скандинавский стиль по российской цене</li>
-        <li class="advantages__item advantages__item--likes">Увеличивает лайки на фотографиях</li>
-        <li class="advantages__item advantages__item--handmade">Связано вручную с любовью и умилением</li>
-        <li class="advantages__item advantages__item--support">Поддержка отечественного производителя</li>
-        <li class="advantages__item advantages__item--package">Поставляется в подарочной упаковке</li>
-      </ul>
-    </section>
+      <form class="form__filter filter" action="https://echo.htmlacademy.ru/" method="get">
+        <fieldset class="filter__group">
+          <legend class="filter__legend">Тип</legend>
+          <ul class="filter__list">
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="radio" name="product-type" value="accessory" checked>
+                <span class="filter__mark-radio"></span>
+                Аксессуар для интерьера
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="radio" name="product-type" value="toys">
+                <span class="filter__mark-radio"></span>
+                Детская игрушка
+              </label>
+            </li>
+          </ul>
+        </fieldset>
 
-    <section class="reviews">
-      <h2 class="reviews__title title">Отзывы</h2>
-      <ul class="reviews__list">
-        <li class="reviews__item">
-          <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого
-            количества
-            лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-            фотографии
-            сразу стали более стильными, а также набирают больше лайков!</blockquote>
-          <p class="reviews__autor">Анастасия Красильникова</p>
-          <cite class="reviews__link">@misssssiskras</cite>
-        </li>
-        <li class="reviews__item">
-          <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого
-            количества
-            лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
-            фотографии
-            сразу стали более стильными, а также набирают больше лайков!</blockquote>
-          <p class="reviews__autor">Анастасия Красильникова</p>
-          <cite class="reviews__link">@misssssiskras</cite>
-        </li>
-      </ul>
-      <div class="reviews__button-wrapper">
-        <button class="reviews__button-previous" type="button">
-          <span class="visually-hidden">Предыдущий отзыв.</span>
-        </button>
-        <button class="reviews__button-next" type="button">
-          <span class="visually-hidden">Следующий отзыв.</span>
-        </button>
-        <a class="reviews__write button" href="#">Написать</a>
-      </div>
-    </section>
-    <section class="contacts">
-      <h2 class="contacts__title title">Контакты</h2>
-      <address class="contacts__adress">
-        <p class="contacts__email-label">e-mail:</p>
-        <a class="contacts__email-content" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
-        <p class="contacts__text-label">адрес:</p>
-        <p class="contacts__text-content">г. Санкт-Петербург ул. Большая Конюшенная д. 19/8, офис 101</p>
-      </address>
-      <div class="contacts__map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533182!2d30.32085871558654!3d59.93871648187622!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1649167384236!5m2!1sru!2sru"
-          width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-      <a class="contacts__write button" href="#">Напишите нам</a>
+        <fieldset class="filter__group">
+          <legend class="filter__legend">Цвет</legend>
+          <ul class="filter__list">
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="checkbox" name="white" checked>
+                <span class="filter__mark-checkbox"></span>
+                Белый
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="checkbox" name="gray" checked>
+                <span class="filter__mark-checkbox"></span>
+                Серый
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="checkbox" name="tiffany">
+                <span class="filter__mark-checkbox"></span>
+                Тиффани
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="checkbox" name="black">
+                <span class="filter__mark-checkbox"></span>
+                Черный
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="checkbox" name="pink">
+                <span class="filter__mark-checkbox"></span>
+                Розовый
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label">
+                <input class="filter__input visually-hidden" type="checkbox" name="orange">
+                <span class="filter__mark-checkbox"></span>
+                Оранжевый
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+
+        <fieldset class="filter__group">
+          <legend class="filter__legend">ФИО</legend>
+          <ul class="filter__list">
+            <li class="filter__item">
+              <label class="filter__label filter__label-name">Имя:
+                <input class="filter__input-name" type="text" name="name" placeholder="Введите ваше имя*" required>
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label filter__label-name">Фамилия:
+                <input class="filter__input-name" type="text" name="surname" placeholder="Укажите фамилию*" required>
+              </label>
+            </li>
+            <li class="filter__item">
+              <label class="filter__label filter__label-name">Отчество:
+                <input class="filter__input-name" type="text" name="patronymic" placeholder="Отчество, если желаете">
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+
+        <fieldset class="filter__group">
+          <legend class="filter__legend">Тел</legend>
+          <input class="filter__input-phone" type="tel" name="phone" placeholder="+7 ХХХ ХХХ ХХ ХХ*" required>
+        </fieldset>
+        <fieldset class="filter__group">
+          <legend class="filter__legend">E-mail</legend>
+          <input class="filter__input-email" type="email" name="email" placeholder="Ваш Email*" required>
+        </fieldset>
+
+        <fieldset class="filter__group">
+          <legend class="filter__legend">Доп</legend>
+          <textarea class="filter__input-textarea" name="comment" rows="10"
+            placeholder="Опишите все ваши пожелания к заказу"></textarea>
+        </fieldset>
+
+        <p class="filter__notification">*Поля обязательны для заполнения</p>
+        <button class="filter__button button" type="submit">Отправить заказ</button>
+      </form>
     </section>
   </main>
 
@@ -201,35 +224,6 @@
       </a>
     </div>
   </footer>
-
-  <div class="modal modal--closed">
-    <section class="modal-content">
-      <h2 class="modal-content__title title">Добавить в корзину</h2>
-      <form class="modal-content__form modal-form" action="https://echo.htmlacademy.ru/" method="get">
-        <fieldset class="modal-form__group">
-          <legend class="modal-form__title">Выберите размер:</legend>
-          <ul class="modal-form__list">
-            <li class="modal-form__item">
-              <label class="modal-form__label">s
-                <input class="modal-form__input visually-hidden" type="radio" name="size" value="s">
-              </label>
-            </li>
-            <li class="modal-form__item">
-              <label class="modal-form__label">m
-                <input class="modal-form__input visually-hidden" type="radio" name="size" value="m">
-              </label>
-            </li>
-            <li class="modal-form__item">
-              <label class="modal-form__label">l
-                <input class="modal-form__input visually-hidden" type="radio" name="size" value="l">
-              </label>
-            </li>
-          </ul>
-          <button class="modal-form__button button" type="submit">Добавить</button>
-        </fieldset>
-      </form>
-    </section>
-  </div>
 
 </body>
 
