--- a/source/index.html
+++ b/source/index.html
@@ -5,10 +5,12 @@
   <meta charset="utf-8">
   <title>HTML Academy: Мишка</title>
   <link rel="stylesheet" href="./css/style.css">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon.png">
 </head>
 
 <body>
-  <div class="page__body">
+  <div class="page-body">
     <header class="main-header">
       <a class="main-header__logo logo">
         <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" width="86" height="35"
@@ -157,8 +159,8 @@
       </section>
     </main>
 
-    <footer class="main-footer">
-      <div class="main-footer__social social">
+    <footer class="footer">
+      <div class="footer__social social">
         <ul class="social__list">
           <li class="social__item">
             <a href="https://vk.com/htmlacademy" class="social__link">
@@ -196,7 +198,7 @@
         </ul>
       </div>
 
-      <div class="main-footer__copyright copyright">
+      <div class="footer__copyright copyright">
         <b class="copyright__text">Разработано</b>
         <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
           <svg class="copyright__icon" width="27" height="35" viewBox="0 0 27 35" fill="none"
