--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
         <span class="visually-hidden">Открыть меню.</span>
       </button>
       <nav class="main-nav main-nav--primary main-nav--visible main-nav--hidden">
-        <ul class="main-nav__list site-list">
+        <ul class="main-nav__list site-list site-list--theme-light">
           <li class="site-list__item">
             <a class="site-list__link" href="catalog.html">Каталог товаров</a>
           </li>
@@ -62,7 +62,7 @@
         </ul>
       </nav>
       <nav class="main-nav main-nav--tertiary">
-        <ul class="main-nav__list assortement-list">
+        <ul class="main-nav__list assortement-list assortement-list--theme-light">
           <li class="assortement-list__item">
             <a class="assortement-list__link" href="#">Новые поступления</a>
           </li>
@@ -72,7 +72,7 @@
         </ul>
       </nav>
 
-      <p class="main-header__text">Бесплатная доставка по России</p>
+      <p class="main-header__text main-header__text--theme-light">Бесплатная доставка по России</p>
     </header>
 
     <main class="main-container">
