--- a/source/index.html
+++ b/source/index.html
@@ -20,14 +20,10 @@
           <img class="main-header__logo-image" src="./img/mishka-logo-mobile.svg" alt="Логотип магазина Мишка.">
         </picture>
       </a>
-      <button class="main-header__toggle" type="button">
-        <svg class="main-header__toggle-icon" width="20" height="14" viewBox="0 0 20 14" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path d="M20 0H0v2h20V0ZM20 6H0v2h20V6ZM20 12H0v2h20v-2Z" fill="#231F20" />
-        </svg>
-        <span class="visually-hidden">Открыть меню.</span>
-      </button>
-      <nav class="main-nav main-nav--primary main-nav--visible main-nav--hidden">
+      <nav class="main-nav main-nav--hidden main-nav--nojs">
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню.</span>
+        </button>
         <ul class="main-nav__list site-list site-list--theme-light">
           <li class="site-list__item">
             <a class="site-list__link" href="catalog.html">Каталог товаров</a>
@@ -36,8 +32,6 @@
             <a class="site-list__link" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
-      </nav>
-      <nav class="main-nav main-nav--secondary main-nav--visible main-nav--hidden">
         <ul class="main-nav__list user-list">
           <li class="user-list__item">
             <a class="user-list__link" href="#">
@@ -60,19 +54,18 @@
               Корзина: <span class="cart-status">пока пуста</span></a>
           </li>
         </ul>
+        <p class="main-nav__text main-nav__text--theme-light">Бесплатная доставка по России</p>
+        <div class="main-nav main-nav--tertiary">
+          <ul class="main-nav__list assortement-list assortement-list--theme-light">
+            <li class="assortement-list__item">
+              <a class="assortement-list__link" href="#">Новые поступления</a>
+            </li>
+            <li class="assortement-list__item">
+              <a class="assortement-list__link" href="#">Распродажа</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <nav class="main-nav main-nav--tertiary">
-        <ul class="main-nav__list assortement-list assortement-list--theme-light">
-          <li class="assortement-list__item">
-            <a class="assortement-list__link" href="#">Новые поступления</a>
-          </li>
-          <li class="assortement-list__item">
-            <a class="assortement-list__link" href="#">Распродажа</a>
-          </li>
-        </ul>
-      </nav>
-
-      <p class="main-header__text main-header__text--theme-light">Бесплатная доставка по России</p>
     </header>
 
     <main class="main-container">
@@ -128,7 +121,8 @@
           <li class="reviews__item">
             <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого
               количества
-              лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои
+              лайков, как у&nbspпопулярных инстамамочек. В&nbspотчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и&nbspмои
               фотографии
               сразу стали более стильными, а также набирают больше лайков!</blockquote>
             <div class="reviews__autor">
@@ -168,7 +162,8 @@
           <span class="contacts__email-label">e-mail:</span>
           <a class="contacts__email-content" href="mailto:info@mimimishkashop.ru">info@mimimishkashop.ru</a>
           <span class="contacts__text-label">адрес:</span>
-          <span class="contacts__text-content">г. Санкт-Петербург<br>ул. Большая Конюшенная д.&#160;19/8, офис 101</span>
+          <span class="contacts__text-content">г. Санкт-Петербург<br>ул. Большая Конюшенная д.&#160;19/8, офис
+            101</span>
         </address>
         <div class="contacts__map">
           <iframe
@@ -272,7 +267,7 @@
     </div>
   </div>
 
-
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
